--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title>Game</title>
   </head>
   <body>
-    <canvas id="myCanvas"></canvas>
+    <div id="container">
+      <canvas id="carCanvas"></canvas>
+      <div id="verticalButtons">
+        <button onclick="save">💾</button>
+        <button onclick="dicard">🗑️</button>
+      </div>
+      <canvas id="networkCanvas"></canvas>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
