--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <div id="container">
       <canvas id="carCanvas"></canvas>
       <div id="verticalButtons">
-        <button onclick="save">💾</button>
-        <button onclick="dicard">🗑️</button>
+        <button id="save">💾</button>
+        <button id="discard">🗑️</button>
       </div>
       <canvas id="networkCanvas"></canvas>
     </div>
